Edit mixin info and fix issue with some JEI recipes